<resources>
    <string name="app_name">Codesquare</string>
    <string name="app_name_alt">Codesquare</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="skip"><u>Skip</u></string>
    <string name="sample_user_info_1"><b>13</b> Followers <b>12</b> Following <b>0</b> Projects <b>0</b> Blogs</string>
    <string name="large_text">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using Content here, content here, making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for lorem ipsum will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like).  It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using Content here, content here, making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for lorem ipsum will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like).  It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using Content here, content here, making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for lorem ipsum will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like).  It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using Content here, content here, making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for lorem ipsum will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like).  It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using Content here, content here, making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for lorem ipsum will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like).  It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using Content here, content here, making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for lorem ipsum will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like).</string>
    <string name="follow_text">Follow</string>
    <string name="unfollow_text">Unfollow</string>
    <string name="fcm_message">New Message</string>
    <string name="default_notification_channel_id">default_notification_channel_id</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="fullscreen_image_transition">fullscreen_image_transition</string>
    <string name="title_create_project">Create Project</string>
    <string name="title_create_blog">Create Blog</string>
    <string name="title_edit_profile">Edit Profile</string>
    <string name="messages">Messages</string>
    <string name="explore">Explore</string>
    <string name="edit">Edit</string>
    <string name="sign_in_header"><b>Sign in</b> or <b>Create</b> new account</string>
    <string name="user_detail_header">Let us <b>know you better</b></string>
    <string name="interests_header">Select something that <b>interests</b> you.</string>
    <string name="interests_header_alt">Explore other <b>interests</b></string>
    <string name="empty_posts_text">No posts found</string>
    <string name="cover">cover</string>
    <string name="image_layout_image">Image Layout image</string>
    <string name="upload_image_error">There was an error uploading this image.</string>
    <string name="delete">Delete</string>
    <string name="add_project_image">Image to be added to the project</string>
    <string name="sample_hint">Write something here ...</string>
    <string name="add_location">Add Location</string>
    <string name="add_location_btn_desc">Button to add location to the project</string>
    <string name="add_tag_btn_desc">Button to add tag to project</string>
    <string name="add_link_btn_desc">Button to add links to the project</string>
    <string name="add_image_btn_desc">Button to add image to project</string>
    <string name="create">Create</string>
    <string name="project_title_hint">Title of the Project ...</string>
    <string name="sample_time_and_date_text">12:35 pm, Tue • Califormina LA</string>
    <string name="sample_name">Jamid Deka</string>
    <string name="post_image_desc">Post Image</string>
    <string name="sample_title">The title of the Blog that is too long</string>
    <string name="sample_likes_text">135 Likes ● 43 Dislikes ● 54 Contributors</string>
    <string name="more_comments">More comments</string>
    <string name="home">Home</string>
    <string name="notification">Notification</string>
    <string name="admin">Admin</string>
    <string name="done">Done</string>
    <string name="random">Random</string>
    <string name="sent_request">Sent Request</string>
    <string name="comments">Comments</string>
    <string name="project_guidelines_info">Create Project Guidelines</string>
    <string name="project_guidelines_info_long">Create guidelines for other contributors for the appropriate code of conduct for this purpose.</string>
</resources>