<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/postRoot"
        style="@style/PostCardStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="0dp"
        app:cardElevation="0dp"
        app:contentPaddingBottom="8dp"
        app:contentPaddingTop="8dp"
        app:rippleColor="#1B000000"
        app:strokeWidth="0dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/projectTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="12dp"
                android:fontFamily="@font/roboto_black"
                android:text="@string/sample_title"
                android:textSize="20sp"
                app:layout_constraintBottom_toTopOf="@+id/projectAdminImg"
                app:layout_constraintEnd_toStartOf="@+id/projectSaveBtn"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <com.facebook.drawee.view.SimpleDraweeView
                android:id="@+id/projectAdminImg"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toTopOf="@id/projectThumb"
                app:layout_constraintStart_toStartOf="@+id/projectTitle"
                app:layout_constraintTop_toBottomOf="@+id/projectTitle"
                app:placeholderImage="@drawable/ic_user"
                app:roundAsCircle="true" />

            <TextView
                android:id="@+id/projectAdminName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:text="@string/sample_name"
                app:layout_constraintBottom_toBottomOf="@+id/projectAdminImg"
                app:layout_constraintStart_toEndOf="@+id/projectAdminImg"
                app:layout_constraintTop_toTopOf="@+id/projectAdminImg"
                app:layout_constraintVertical_bias="0.0" />

            <com.facebook.drawee.view.SimpleDraweeView
                android:id="@+id/projectThumb"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:visibility="gone"
                app:layout_constraintBottom_toTopOf="@+id/projectMiniContent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/projectAdminImg"
                app:placeholderImage="@color/darkestGrey"
                app:viewAspectRatio="1.66"
                tools:visibility="visible" />

            <TextView
                android:id="@+id/projectMiniContent"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="4dp"
                android:ellipsize="end"
                android:maxLines="5"
                android:minHeight="70dp"
                android:text="@string/large_text"
                android:textColor="#535353"
                app:layout_constraintBottom_toTopOf="@+id/projectLikeBtn"
                app:layout_constraintEnd_toStartOf="@+id/projectBlogImage"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/projectThumb" />

            <Button
                android:id="@+id/projectSaveBtn"
                style="@style/GenericButton"
                android:layout_width="48dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="12dp"
                app:icon="@drawable/bookmark_selector"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/projectTitle"
                app:layout_constraintTop_toTopOf="@+id/projectTitle"
                tools:text=" " />

            <Button
                android:id="@+id/projectLikeBtn"
                style="@style/GenericButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginBottom="8dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                app:icon="@drawable/thumb_up_selector"
                app:iconSize="24dp"
                app:layout_constraintBottom_toTopOf="@+id/meta"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/projectMiniContent" />

            <Button
                android:id="@+id/projectDislikeBtn"
                style="@style/GenericButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                app:icon="@drawable/thumb_down_selector"
                app:iconSize="24dp"
                app:layout_constraintBottom_toBottomOf="@+id/projectLikeBtn"
                app:layout_constraintStart_toEndOf="@+id/projectLikeBtn"
                app:layout_constraintTop_toTopOf="@+id/projectLikeBtn" />

            <Button
                android:id="@+id/projectCommentBtn"
                style="@style/GenericButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                app:icon="@drawable/ic_comment"
                app:iconSize="26dp"
                app:layout_constraintBottom_toBottomOf="@+id/projectDislikeBtn"
                app:layout_constraintStart_toEndOf="@+id/projectDislikeBtn"
                app:layout_constraintTop_toTopOf="@+id/projectDislikeBtn" />

            <Button
                android:id="@+id/projectOptionsBtn"
                style="@style/Theme.Button.IconOnly"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:icon="@drawable/ic_baseline_more_horiz_24"
                app:layout_constraintBottom_toBottomOf="@+id/projectDislikeBtn"
                app:layout_constraintEnd_toEndOf="@+id/projectSaveBtn"
                app:layout_constraintTop_toTopOf="@+id/projectDislikeBtn"
                app:rippleColor="#59D6D4D4"
                tools:text=" " />

            <TextView
                android:id="@+id/projectMetaText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:text="@string/sample_time_and_date_text"
                android:textColor="#777575"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="@+id/projectAdminImg"
                app:layout_constraintStart_toEndOf="@+id/projectAdminImg"
                app:layout_constraintTop_toTopOf="@+id/projectAdminImg"
                app:layout_constraintVertical_bias="1.0" />

            <ProgressBar
                android:id="@+id/miniProjectProgressBar"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:indeterminate="true"
                android:indeterminateTint="@color/white"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="@+id/projectThumb"
                app:layout_constraintEnd_toEndOf="@+id/projectThumb"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/projectThumb"
                tools:visibility="visible" />

            <com.facebook.drawee.view.SimpleDraweeView
                android:id="@+id/projectBlogImage"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="@+id/projectMiniContent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/projectMiniContent"
                app:layout_constraintTop_toTopOf="@+id/projectMiniContent"
                app:placeholderImage="@color/grey"
                app:viewAspectRatio="1.333"
                tools:visibility="visible" />

            <TextView
                android:id="@+id/meta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="18dp"
                android:layout_marginBottom="8dp"
                android:text="@string/sample_likes_text"
                android:textColor="#777575"
                android:textSize="12sp"
                app:layout_constraintBottom_toTopOf="@id/post_comments_recycler"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/projectLikeBtn" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/post_comments_recycler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:layout_constraintBottom_toTopOf="@id/more_comments"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/meta"
                tools:itemCount="2"
                tools:listitem="@layout/comment_item" />

            <TextView
                android:id="@+id/more_comments"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?selectableItemBackground"
                android:focusable="true"
                android:paddingStart="12dp"
                android:paddingTop="8dp"
                android:paddingEnd="12dp"
                android:paddingBottom="8dp"
                android:text="@string/more_comments"
                android:textColor="#757575"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/post_comments_recycler" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>
</layout>